--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,13 @@ html {
     background-color: #000;
     font-family: Arial, Helvetica, sans-serif;
 }
-body{
+
+body {
     background-color: #fff;
     width: 80%;
     margin: 0 auto;
 }
+
 p {
     font-size: 1.25em;
 }
@@ -18,16 +20,88 @@ small {
     font-size: 1em;
 }
 
+h1 {
+    font-size: 3em;
+    text-align: center;
+    color: #007d7b;
+    margin: auto;
+    padding: 0;
+}
+
+h2 {
+    font-size: 2em;
+    text-transform: uppercase;
+}
+
+img {
+    margin: 0 auto;
+    width: 100%;
+}
+
+header {
+    background-color: #fff;
+}
+
+nav {
+    background-color: #000;
+}
+
+nav ul{
+    display: flex;
+    justify-content: center;
+}
+
+nav li {
+    list-style: none;
+    margin: 1em;
+}
+
+nav a {
+    font-size: 1.5em;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+[href="#top"] {
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    border-style: solid;
+    border-width: 2px;
+    padding: 2px;
+    font-size: 2em;
+    /* background-color: rgba(255,255,255,.25); */
+    background-color: rgb(0, 125, 123,.3)
+    
+}
+
+section#About {
+    margin: 0 .5em;
+}
+
+section#About h2 {
+    text-align: center;
+}
+
+section#Gallery {
+    text-align: center;
+}
+
+section#Gallery p {
+    text-align: left;
+    margin: .25em;
+}
+figure {
+    position: relative;
+}
 figure:nth-child(3),
 figure:nth-child(4),
 figure:nth-child(5),
 figure:nth-child(9),
 figure:nth-child(14) {
     color: #fff;
-}
-
-figure {
-    position: relative;
 }
 
 figcaption {
@@ -55,70 +129,105 @@ figure:nth-child(14) figcaption {
     bottom: 85%;
 }
 
-nav a {
-    font-size: 1.5em;
-    text-decoration: none;
-    color: #fff;
-    text-transform: uppercase;
-}
-
-h1 {
-    font-size: 3em;
-    text-align: center;
-    color: #007d7b;
-    margin: auto;
-    padding: 0;
-}
-
-h2 {
-    font-size: 2em;
-    text-transform: uppercase;
-}
-
-header {
-    background-color: #fff;
-}
-
-nav {
+section#Contact {
     background-color: #000;
-}
-
-ul {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    color: #fff;
     text-align: center;
-    justify-content: center;
+    padding-top: 1em;
 }
-li{
-    list-style: none;
-
+section#Contact h2{
+    margin-top: 0;
 }
-
-img {
-    margin: 0 auto;
+section#Contact form {
+    text-align: left;
+}
+form {
+    display: inline-block;
+    width: 80%;
+    padding-top: 1em;
+}
+form h3 {
+    visibility: hidden;
+    position: absolute;
+}
+label{
+    text-transform: uppercase;
+}
+input{
     width: 100%;
+    margin-bottom: 1em;
+    text-transform: uppercase;
+    font-weight: bold;
 }
-
-section#Gallery {
-    text-align: center;
+input::placeholder{
+    color:#007d7b;
 }
-
-section#Gallery p {
-    text-align: left;
+#button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #007d7b;
+    color: #fff;
+    border-radius: 10px;
+    max-width: 60%;
 }
-section#Contact{
+#button:hover {
+    background-color: #fff;
+    color: #007d7b;
+}
+footer {
     background-color: #000;
     color: #fff;
     text-align: center;
+    padding-top: 3em;
+    padding-bottom: 1em;
+    text-transform: uppercase;
 }
-section#Contact form{
-    text-align: left;
+
+
+@media screen and (min-width:880px) {
+
+    section#Gallery{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        padding-left: .25em;
+        padding-right: .25em;
+    }
+    section#Gallery h2{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        margin-top: 0;
+    }
+    section#Gallery p{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        margin-bottom: .5em;
+    }
+    figure {
+        margin: .25em;
+    }
+    form{
+        max-width: 600px;
+    }
+    
 }
-section#Contact form h3{
-visibility: hidden;
-position: absolute;
-}
-footer{
-    background-color: #000;
-    color: #fff;
+@media screen and (min-width:1300px) {
+    nav ul{
+        justify-content: right;
+    }
+    section#Gallery{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+    section#Gallery h2{
+        grid-column-start: 1;
+        grid-column-end: 4;
+        margin-top: 0;
+    }
+    section#Gallery p{
+        grid-column-start: 1;
+        grid-column-end: 4;
+        margin-bottom: .5em;
+    }
+
 }
